--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 	<meta chartset="utf-8">
-  	<tittle>My First Bistarter</tittle>
+  	<title>My First Bistarter</title>
   	<link type="text/css"  rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
   	<style type="text/css">
   	body {
